// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render field types based on schema 1`] = `
<DocumentFragment>
  <div
    class="grid grid"
  />
</DocumentFragment>
`;

exports[`Should render nested field types based on schema 1`] = `
<DocumentFragment>
  <div
    class="grid grid"
  />
</DocumentFragment>
`;

exports[`Should render nested sections 1`] = `
<DocumentFragment>
  <div
    class="grid grid"
  >
    <div
      class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
      >
        <div
          class="divider"
        >
          Section 1
        </div>
      </div>
      <div
        class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
      >
        <div
          class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
        >
          <div
            class="divider"
          >
            Section 1.1
          </div>
        </div>
      </div>
    </div>
    <div
      class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
      >
        <div
          class="divider"
        >
          Section 2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render sections with colSpan 1`] = `
<DocumentFragment>
  <div
    class="grid grid"
  >
    <div
      class="section gridSection colSpan colSpan-8 space-before-0 space-after-0"
    >
      <div
        class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
      >
        <div
          class="divider"
        >
          Section 1
        </div>
      </div>
    </div>
    <div
      class="section gridSection colSpan colSpan-4 space-before-0 space-after-0"
    >
      <div
        class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
      >
        <div
          class="divider"
        >
          Section 2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render sections without label 1`] = `
<DocumentFragment>
  <div
    class="grid grid"
  >
    <div
      class="section gridSection colSpan colSpan-8 space-before-0 space-after-0"
    />
    <div
      class="section gridSection colSpan colSpan-4 space-before-0 space-after-0"
    >
      <div
        class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
      >
        <div
          class="divider"
        >
          Section 2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
